--- a/rods.html
+++ b/rods.html
@@ -197,6 +197,7 @@
                         <li><a href="https://www.facebook.com/captainblindscanada" target="_blank" rel="noopener"><span class="fab fa-facebook-square" aria-label="CaptainBlinds on Facebook"></span></a></li>
                         <li><a href="https://www.instagram.com/captainblinds/" target="_blank" rel="noopener"><span class="fab fa-instagram" aria-label="CaptainBlinds on Instagram"></span></a></li>
                         <li><a href="https://ca.pinterest.com/captainblindsca/" target="_blank" rel="noopener"><span class="fab fa-pinterest-p" aria-label="CaptainBlinds on Pinterest"></span></a></li>
+                        <li><a href="https://wa.me/14169853839" target="_blank" rel="noopener"><span class="fab fa-whatsapp"></span></a></li>
                     </ul>
                 </div>
             </nav>
@@ -277,9 +278,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/1.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Decorative Rod</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -292,9 +290,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/2.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Decorative Rod</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -307,9 +302,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/3.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Decorative Rod</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -322,9 +314,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/4.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Decorative Rod</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -337,9 +326,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/5.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Decorative Rod</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -352,9 +338,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/6.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Ceiling Track</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -367,9 +350,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/7.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Wall Track</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -382,9 +362,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/8.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Custom Track</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -397,9 +374,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/9.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Double Rod</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -412,39 +386,6 @@
                                 </figure>
                                 <div class="content-box">
                                     <div class="view-btn"><a href="assets/images/gallery/rods/10.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Decorative Rod</h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column">
-                        <div class="project-block-one">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="assets/images/gallery/rods/11.jpg" alt="Track system with ripplefold drapery">
-                                </figure>
-                                <div class="content-box">
-                                    <div class="view-btn"><a href="assets/images/gallery/rods/11.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>Ripplefold Track</h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column">
-                        <div class="project-block-one">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="assets/images/gallery/rods/12.jpg" alt="Curtain rod with end caps">
-                                </figure>
-                                <div class="content-box">
-                                    <div class="view-btn"><a href="assets/images/gallery/rods/12.jpg" class="lightbox-image" data-fancybox="rods">+</a></div>
-                                    <div class="text">
-                                        <h3>End Cap Rod</h3>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -518,16 +459,15 @@
                                         <div class="shape"></div> 
                                     </div>
                                     <div class="widget-content">
-                                        <ul class="links clearfix">                                          
+                                        <ul class="links clearfix">
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
-                                            <li><a href="galaxy.html">Galaxy Curtains</a></li>
-                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
-                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
-                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
-                                            <li><a href="silhouette.html">Silhouette</a></li>
-                                            <li><a href="wood.html">Wood Blinds</a></li>                                    
-                                            <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>                                    
+                                            <li><a href="silhouette.html">Silhoutte Blinds</a></li>
+                                            <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
+                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
+                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -536,13 +476,15 @@
                                 <div class="footer-widget links-widget ml-70">
                                     <div class="widget-content">
                                         <ul class="links clearfix">
-                                            <li><a href="graphic.html">Graphic Blinds</a></li>
+                                            <li><a href="dual_blackout.html">Dual Shades</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
+                                            <li><a href="wood.html">Wood Blinds</a></li>
+                                            <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
                                             <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
-                                            <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
+                                            <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                         </ul>
                                     </div>
                                 </div>
