--- a/roller_blinds.html
+++ b/roller_blinds.html
@@ -198,6 +198,7 @@
                         <li><a href="https://www.facebook.com/captainblindscanada" target="_blank" rel="noopener"><span class="fab fa-facebook-square" aria-label="CaptainBlinds on Facebook"></span></a></li>
                         <li><a href="https://www.instagram.com/captainblinds/" target="_blank" rel="noopener"><span class="fab fa-instagram" aria-label="CaptainBlinds on Instagram"></span></a></li>
                         <li><a href="https://ca.pinterest.com/captainblindsca/" target="_blank" rel="noopener"><span class="fab fa-pinterest-p" aria-label="CaptainBlinds on Pinterest"></span></a></li>
+                        <li><a href="https://wa.me/14169853839" target="_blank" rel="noopener"><span class="fab fa-whatsapp"></span></a></li>
                     </ul>
                 </div>
             </nav>
@@ -242,16 +243,40 @@
                                             <h5><a href="zebra_blinds.html">Zebra Blinds</a></h5>
                                             <span class="line"></span>
                                         </li>
-                                        <li>
-                                            <h5><a href="galaxy.html">Galaxy Curtains</a></h5>
-                                            <span class="line"></span>
-                                        </li>
                                         <li class="active">
                                             <h5><a href="roller_blinds.html">Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="silhouette.html">Silhouette</a></h5>
+                                            <h5><a href="silhouette.html">Silhoutte Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="curtains.html">Curtains</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="rods.html">Curtains Rod Type</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="honeycomb.html">Honeycomb</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="dual_blackout.html">Dual Shades</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="outdoor.html">Outdoor Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -259,15 +284,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="dual_blackout.html">Dual Blackout Shades</a></h5>
-                                            <span class="line"></span>
-                                        </li>
-                                        <li>
                                             <h5><a href="graphic.html">Graphic Blind</a></h5>
-                                            <span class="line"></span>
-                                        </li>
-                                        <li>
-                                            <h5><a href="outdoor.html">Outdoor Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -287,10 +304,11 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="smart.html">Motorization &amp; Smart Home Solutions</a></h5>
+                                            <h5><a href="smart.html">Motorization & Smart Home Solutions</a></h5>
                                             <span class="line"></span>
                                         </li>
                                     </ul>
+</ul>
                                 </div>
                             </div>
                             <div class="sidebar-gallery" style="background-image: url(assets/images/gallery/roller/1.jpg);">
@@ -454,16 +472,15 @@
                                         <div class="shape"></div> 
                                     </div>
                                     <div class="widget-content">
-                                        <ul class="links clearfix">                                          
+                                        <ul class="links clearfix">
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
-                                            <li><a href="galaxy.html">Galaxy Curtains</a></li>
-                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
-                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
-                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
-                                            <li><a href="silhouette.html">Silhouette</a></li>
-                                            <li><a href="wood.html">Wood Blinds</a></li>                                    
-                                            <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>                                    
+                                            <li><a href="silhouette.html">Silhoutte Blinds</a></li>
+                                            <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
+                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
+                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -472,13 +489,15 @@
                                 <div class="footer-widget links-widget ml-70">
                                     <div class="widget-content">
                                         <ul class="links clearfix">
-                                            <li><a href="graphic.html">Graphic Blinds</a></li>
+                                            <li><a href="dual_blackout.html">Dual Shades</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
+                                            <li><a href="wood.html">Wood Blinds</a></li>
+                                            <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
                                             <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
-                                            <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
+                                            <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                         </ul>
                                     </div>
                                 </div>
