--- a/clients-element.html
+++ b/clients-element.html
@@ -298,6 +298,7 @@
                         <li><a href="index.html"><span class="fab fa-pinterest-p"></span></a></li>
                         <li><a href="https://www.instagram.com/captainblinds/" target="_blank" rel="noopener"><span class="fab fa-instagram"></span></a></li>
                         <li><a href="index.html"><span class="fab fa-youtube"></span></a></li>
+                        <li><a href="https://wa.me/14169853839" target="_blank" rel="noopener"><span class="fab fa-whatsapp"></span></a></li>
                     </ul>
                 </div>
             </nav>
@@ -386,11 +387,23 @@
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links clearfix">
-                                            <li><a href="index.html">Rollar Blinds</a></li>
-                                            <li><a href="index.html">Window Blinds</a></li>
-                                            <li><a href="index.html">Roman Blinds</a></li>
-                                            <li><a href="index.html">Venetian Blinds</a></li>
-                                            <li><a href="index.html">Wooden Blinds</a></li>
+                                            <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
+                                            <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="silhouette.html">Silhoutte Blinds</a></li>
+                                            <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
+                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
+                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb</a></li>
+                                            <li><a href="dual_blackout.html">Dual Shades</a></li>
+                                            <li><a href="outdoor.html">Outdoor Shades</a></li>
+                                            <li><a href="wood.html">Wood Blinds</a></li>
+                                            <li><a href="graphic.html">Graphic Blind</a></li>
+                                            <li><a href="laser.html">Laser Roller Shades</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
+                                            <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
+                                            <li><a href="roman_blinds.html">Roman Shades</a></li>
+                                            <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                         </ul>
                                     </div>
                                 </div>
