--- a/silhouette.html
+++ b/silhouette.html
@@ -197,6 +197,7 @@
                         <li><a href="https://www.facebook.com/captainblindscanada" target="_blank" rel="noopener"><span class="fab fa-facebook-square" aria-label="CaptainBlinds on Facebook"></span></a></li>
                         <li><a href="https://www.instagram.com/captainblinds/" target="_blank" rel="noopener"><span class="fab fa-instagram" aria-label="CaptainBlinds on Instagram"></span></a></li>
                         <li><a href="https://ca.pinterest.com/captainblindsca/" target="_blank" rel="noopener"><span class="fab fa-pinterest-p" aria-label="CaptainBlinds on Pinterest"></span></a></li>
+                        <li><a href="https://wa.me/14169853839" target="_blank" rel="noopener"><span class="fab fa-whatsapp"></span></a></li>
                     </ul>
                 </div>
             </nav>
@@ -243,15 +244,39 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="galaxy.html">Galaxy Curtains</a></h5>
-                                            <span class="line"></span>
-                                        </li>
-                                        <li>
                                             <h5><a href="roller_blinds.html">Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li class="active">
-                                            <h5><a href="silhouette.html">Silhouette</a></h5>
+                                            <h5><a href="silhouette.html">Silhoutte Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="curtains.html">Curtains</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="rods.html">Curtains Rod Type</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="honeycomb.html">Honeycomb</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="dual_blackout.html">Dual Shades</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="outdoor.html">Outdoor Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -263,10 +288,6 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="outdoor.html">Outdoor Shades</a></h5>
-                                            <span class="line"></span>
-                                        </li>
-                                        <li>
                                             <h5><a href="laser.html">Laser Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
@@ -275,7 +296,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="blackout curtains.html">Blackout Roller Shades</a></h5>
+                                            <h5><a href="blackout_curtains.html">Blackout Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -283,10 +304,11 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="smart.html">Motorization &amp; Smart Home Solutions</a></h5>
+                                            <h5><a href="smart.html">Motorization & Smart Home Solutions</a></h5>
                                             <span class="line"></span>
                                         </li>
                                     </ul>
+</ul>
                                 </div>
                             </div>
                             <div class="sidebar-gallery" style="background-image: url(assets/images/gallery/silhouette/1.jpg);">
@@ -328,7 +350,7 @@
                             <!-- Main intro block -->
                             <div class="content-one">
                                 <figure class="image-box">
-                                    <img src="assets/images/gallery/silhouette/main.jpg" alt="Silhouette sheer shades installed on large windows in a living room">
+                                    <img src="assets/images/gallery/silhouette/1.jpg" alt="Silhouette sheer shades installed on large windows in a living room" style="width: 800px; height: 400px; object-fit: cover; object-position: center;">
                                 </figure>
                                 <div class="text">
                                     <h2>Silhouette Sheer Shades</h2>
@@ -376,15 +398,12 @@
                                     <div class="content-box">
                                         <div class="inner-box">
                                             <figure class="vector-image-2">
-                                                <img src="assets/images/resource/vector-image-6.png" alt="">
                                             </figure>
                                             <div class="inner clearfix">
                                                 <ul class="list-item">
                                                     <li>Choose vane size and fabric opacity to match your needs</li>
                                                     <li>Coordinate colours and textures with your furniture and walls</li>
                                                     <li>Decide how much view-through and privacy you prefer</li>
-                                                </ul>
-                                                <ul class="list-item pl-45">
                                                     <li>Combine with room-darkening back shades for bedrooms or media rooms</li>
                                                     <li>Add motorization for one-touch or automated control</li>
                                                     <li>Designed, measured and installed by our experienced team</li>
@@ -457,10 +476,12 @@
                                         <ul class="links clearfix">
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
-                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
-                                            <li><a href="silhouette.html">Silhouette</a></li>
-                                            <li><a href="wood.html">Wood Blinds</a></li>
-                                            <li><a href="roman_blinds.html">Roman Shades</a></li>
+                                            <li><a href="silhouette.html">Silhoutte Blinds</a></li>
+                                            <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
+                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
+                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -474,13 +495,15 @@
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links clearfix">
-                                            <li><a href="galaxy.html">Galaxy Curtains</a></li>
-                                            <li><a href="graphic.html">Graphic Blinds</a></li>
+                                            <li><a href="dual_blackout.html">Dual Shades</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
+                                            <li><a href="wood.html">Wood Blinds</a></li>
+                                            <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
                                             <li><a href="aliminum.html">Aluminum Blinds</a></li>
-                                            <li><a href="blackout curtains.html">Blackout Roller Shades</a></li>
-                                            <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
+                                            <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
+                                            <li><a href="roman_blinds.html">Roman Shades</a></li>
+                                            <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                         </ul>
                                     </div>
                                 </div>
