--- a/smart.html
+++ b/smart.html
@@ -198,6 +198,7 @@
                         <li><a href="https://www.facebook.com/captainblindscanada" target="_blank" rel="noopener"><span class="fab fa-facebook-square" aria-label="CaptainBlinds on Facebook"></span></a></li>
                         <li><a href="https://www.instagram.com/captainblinds/" target="_blank" rel="noopener"><span class="fab fa-instagram" aria-label="CaptainBlinds on Instagram"></span></a></li>
                         <li><a href="https://ca.pinterest.com/captainblindsca/" target="_blank" rel="noopener"><span class="fab fa-pinterest-p" aria-label="CaptainBlinds on Pinterest"></span></a></li>
+                        <li><a href="https://wa.me/14169853839" target="_blank" rel="noopener"><span class="fab fa-whatsapp"></span></a></li>
                     </ul>
                 </div>
             </nav>
@@ -243,15 +244,39 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="galaxy.html">Galaxy Curtains</a></h5>
-                                            <span class="line"></span>
-                                        </li>
-                                        <li>
                                             <h5><a href="roller_blinds.html">Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="silhouette.html">Silhouette</a></h5>
+                                            <h5><a href="silhouette.html">Silhoutte Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="curtains.html">Curtains</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="rods.html">Curtains Rod Type</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="honeycomb.html">Honeycomb</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="dual_blackout.html">Dual Shades</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="outdoor.html">Outdoor Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -263,10 +288,6 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="outdoor.html">Outdoor Shades</a></h5>
-                                            <span class="line"></span>
-                                        </li>
-                                        <li>
                                             <h5><a href="laser.html">Laser Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
@@ -275,7 +296,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="blackout curtains.html">Blackout Roller Shades</a></h5>
+                                            <h5><a href="blackout_curtains.html">Blackout Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -283,10 +304,11 @@
                                             <span class="line"></span>
                                         </li>
                                         <li class="active">
-                                            <h5><a href="smart.html">Motorization &amp; Smart Home Solutions</a></h5>
+                                            <h5><a href="smart.html">Motorization & Smart Home Solutions</a></h5>
                                             <span class="line"></span>
                                         </li>
                                     </ul>
+</ul>
                                 </div>
                             </div>
                             <div class="sidebar-gallery" style="background-image: url(assets/images/smart.jpg);">
@@ -376,8 +398,6 @@
                                                     <li><strong>Remote Control:</strong> Control one or multiple blinds with a simple handheld remote.</li>
                                                     <li><strong>Smart Home Hub:</strong> Link blinds to a central hub for app and scene control.</li>
                                                     <li><strong>Smart Home Operating Solutions:</strong> Use timers, routines and automation rules.</li>
-                                                </ul>
-                                                <ul class="list-item pl-45">
                                                     <li>Combine different motorisation options within the same home</li>
                                                     <li>Upgrade existing blinds to smart operation where possible</li>
                                                     <li>Ideal for living rooms, bedrooms, offices and commercial spaces</li>
@@ -446,15 +466,15 @@
                                         <div class="shape"></div> 
                                     </div>
                                     <div class="widget-content">
-                                        <ul class="links clearfix">                                          
+                                        <ul class="links clearfix">
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
-                                            <li><a href="galaxy.html">Galaxy Curtains</a></li>
-                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
-                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
-                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
-                                            <li><a href="silhouette.html">Silhouette</a></li>
-                                            <li><a href="wood.html">Wood Blinds</a></li>                                    
+                                            <li><a href="silhouette.html">Silhoutte Blinds</a></li>
+                                            <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
+                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
+                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -464,14 +484,15 @@
                                     
                                     <div class="widget-content">
                                         <ul class="links clearfix">
-                                            <li><a href="graphic.html">Graphic Blinds</a></li>
+                                            <li><a href="dual_blackout.html">Dual Shades</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
+                                            <li><a href="wood.html">Wood Blinds</a></li>
+                                            <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
                                             <li><a href="aliminum.html">Aluminum Blinds</a></li>
-                                            <li><a href="blackout curtains.html">Blackout Roller Shades</a></li>
+                                            <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
-                                            <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
-                                            
+                                            <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                         </ul>
                                     </div>
                                 </div>
